fix: добавлена правильная обработка ошибок, больше работы с базой, попытка справиться с множественными запросами